--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon",
+    "start": "ENVIRONMENT=dev nodemon",
+    "start:prod": "ENVIRONMENT=prod nodemon",
     "dev": "ts-node-dev --respawn ./src",
+    "ganache-server": "ganache-cli --deterministic",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,6 +22,7 @@
   },
   "homepage": "https://github.com/ibaam97/blockchain-assignment#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
@@ -29,6 +32,11 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "solc": "^0.8.10"
+    "big-number": "^2.0.0",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.2",
+    "ganache-cli": "^6.12.2",
+    "solc": "^0.8.10",
+    "web3": "^1.6.1"
   }
 }
